--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -214,7 +214,7 @@
                 app:cardElevation="0dp">
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerHome"
+                    android:id="@+id/homeRecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:nestedScrollingEnabled="false"
