--- a/app/src/main/res/layout/fragment_monthly_activity_item.xml
+++ b/app/src/main/res/layout/fragment_monthly_activity_item.xml
@@ -41,7 +41,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="12dp"
-        app:cardCornerRadius="8dp"
+        app:cardCornerRadius="@dimen/card_corner_radius"
         app:cardElevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +74,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        app:cardCornerRadius="8dp"
+        app:cardCornerRadius="@dimen/card_corner_radius"
         app:cardElevation="0dp"
         app:layout_constraintEnd_toEndOf="@+id/cardViewBudget"
         app:layout_constraintStart_toStartOf="@+id/cardViewBudget"
