--- a/app/src/main/res/layout/item_monthly_activity_credits.xml
+++ b/app/src/main/res/layout/item_monthly_activity_credits.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/creditConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
@@ -9,7 +10,7 @@
     android:focusable="true">
 
     <TextView
-        android:id="@+id/refundNameTextView"
+        android:id="@+id/creditNameTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -19,22 +20,22 @@
         android:text="Payments"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@id/refundAmountTextView"
-        app:layout_constraintStart_toEndOf="@id/refundLogoImageView"
+        app:layout_constraintEnd_toStartOf="@id/creditAmountTextView"
+        app:layout_constraintStart_toEndOf="@id/creditLogoImageView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/refundArrowImageView"
+        android:id="@+id/creditArrowImageView"
         android:layout_width="16dp"
         android:layout_height="0dp"
         android:layout_marginEnd="10dp"
-        app:layout_constraintBottom_toBottomOf="@id/refundAmountTextView"
+        app:layout_constraintBottom_toBottomOf="@id/creditAmountTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/refundNameTextView"
+        app:layout_constraintTop_toTopOf="@id/creditNameTextView"
         app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
 
     <TextView
-        android:id="@+id/refundCountTextView"
+        android:id="@+id/creditCountTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
@@ -42,13 +43,13 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@android:color/tertiary_text_light"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/refundAmountTextView"
-        app:layout_constraintStart_toStartOf="@id/refundNameTextView"
-        app:layout_constraintTop_toBottomOf="@id/refundNameTextView"
+        app:layout_constraintEnd_toStartOf="@id/creditAmountTextView"
+        app:layout_constraintStart_toStartOf="@id/creditNameTextView"
+        app:layout_constraintTop_toBottomOf="@id/creditNameTextView"
         tools:text="2 Payments" />
 
     <TextView
-        android:id="@+id/refundAmountTextView"
+        android:id="@+id/creditAmountTextView"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
@@ -56,28 +57,28 @@
         android:text="$1000000.00"
         android:textAlignment="viewEnd"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-        app:layout_constraintBottom_toBottomOf="@+id/refundNameTextView"
-        app:layout_constraintEnd_toStartOf="@+id/refundArrowImageView"
-        app:layout_constraintTop_toTopOf="@+id/refundNameTextView" />
+        app:layout_constraintBottom_toBottomOf="@+id/creditNameTextView"
+        app:layout_constraintEnd_toStartOf="@+id/creditArrowImageView"
+        app:layout_constraintTop_toTopOf="@+id/creditNameTextView" />
 
     <View
-        android:id="@+id/refundDividerView"
+        android:id="@+id/creditDividerView"
         android:layout_width="0dp"
         android:layout_height="0.7dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/refundLogoImageView" />
+        app:layout_constraintStart_toStartOf="@id/creditLogoImageView" />
 
     <ImageView
-        android:id="@+id/refundLogoImageView"
+        android:id="@+id/creditLogoImageView"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
         android:background="@drawable/travel_background"
         android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="@id/refundCountTextView"
+        app:layout_constraintBottom_toBottomOf="@id/creditCountTextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/refundNameTextView"
+        app:layout_constraintTop_toTopOf="@id/creditNameTextView"
         app:srcCompat="@drawable/travel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
