--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/crystal_blue" />
+        app:srcCompat="@drawable/crystal_turquoise" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layoutLoginUsername"
