--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4378FF</color>
+    <color name="colorPrimary">#0EA88C</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#4378FF</color>
+    <color name="colorAccent">#0EA88C</color>
     <color name="colorOnBackground">#FFFFFF</color>
 </resources>
