Finish top merchant category

--- a/app/src/main/res/layout/fragment_monthly_activity_item.xml
+++ b/app/src/main/res/layout/fragment_monthly_activity_item.xml
@@ -30,7 +30,8 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="12dp"
                 android:text="July 2020"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+                android:textColor="@color/colorPrimaryDark"
                 android:textStyle="bold" />
 
             <TextView
@@ -86,6 +87,7 @@
                 app:cardElevation="0dp">
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/merchantRecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:nestedScrollingEnabled="false"
