--- a/app/src/main/res/layout/activity_initial_connect.xml
+++ b/app/src/main/res/layout/activity_initial_connect.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
         android:text="Finish Signing Up"
         android:textAlignment="center"
@@ -26,7 +26,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:lineSpacingExtra="4sp"
         android:text="In order to understand your spend, you'll need to link your credit card account to your Crystal account."
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="@+id/text_finish_sign_up"
         app:layout_constraintStart_toStartOf="@+id/text_finish_sign_up"
         app:layout_constraintTop_toBottomOf="@+id/text_finish_sign_up" />
