--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/crystal_blue" />
+        app:srcCompat="@drawable/crystal_blue"
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/text_welcome"
