--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -55,6 +55,7 @@
                         android:id="@+id/textViewCurrentBalanceAmount"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="2dp"
                         android:text="$0.00"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                         android:textStyle="bold"
@@ -163,7 +164,8 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@id/divider">
+                        app:layout_constraintTop_toTopOf="@id/divider"
+                        android:focusable="true">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
@@ -179,7 +181,7 @@
                                 android:layout_marginBottom="12dp"
                                 android:text="Monthly Activity"
                                 android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-                                android:textSize="16dp"
+                                android:textSize="16sp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView2"
                                 app:layout_constraintStart_toStartOf="parent"
@@ -193,7 +195,8 @@
                                 android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                                 app:layout_constraintBottom_toBottomOf="@+id/textViewMonthlyActivity"
                                 app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintTop_toTopOf="@+id/textViewMonthlyActivity" />
+                                app:layout_constraintTop_toTopOf="@+id/textViewMonthlyActivity"
+                                android:contentDescription="TODO" />
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
                     </FrameLayout>
