--- a/app/src/main/res/layout/item_monthly_activity_credits.xml
+++ b/app/src/main/res/layout/item_monthly_activity_credits.xml
@@ -32,7 +32,8 @@
         app:layout_constraintBottom_toBottomOf="@id/creditAmountTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/creditNameTextView"
-        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
+        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/creditCountTextView"
@@ -80,5 +81,6 @@
         app:layout_constraintBottom_toBottomOf="@id/creditCountTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/creditNameTextView"
-        app:srcCompat="@drawable/travel" />
+        app:srcCompat="@drawable/travel"
+        android:contentDescription="TODO" />
 </androidx.constraintlayout.widget.ConstraintLayout>
