--- a/app/src/main/res/layout/activity_initial_connect.xml
+++ b/app/src/main/res/layout/activity_initial_connect.xml
@@ -48,4 +48,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/text_finish_sign_up"
         app:layout_constraintStart_toStartOf="@+id/text_finish_sign_up" />
+
+    <ProgressBar
+        android:id="@+id/initialConnectProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
