--- a/app/src/main/res/layout/fragment_monthly_activity_item.xml
+++ b/app/src/main/res/layout/fragment_monthly_activity_item.xml
@@ -5,7 +5,6 @@
     android:id="@+id/monthlyActivityItemConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F1F1F1"
     tools:context=".monthlyactivity.MonthlyActivityItemFragment">
 
     <androidx.core.widget.NestedScrollView
@@ -29,31 +28,27 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="12dp"
+                android:fontFamily="sans-serif-black"
                 android:text="July 2020"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
-                android:textColor="@color/colorPrimaryDark"
-                android:textStyle="bold" />
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                android:textSize="32sp" />
 
             <TextView
                 android:id="@+id/budgetTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="12dp"
+                android:fontFamily="sans-serif-medium"
                 android:text="Budget &amp; Categories"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                android:textStyle="bold" />
+                android:textSize="28sp" />
 
-            <androidx.cardview.widget.CardView
+            <FrameLayout
                 android:id="@+id/budgetCardView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="12dp"
-                app:cardCornerRadius="@dimen/card_corner_radius"
-                app:cardElevation="0dp">
+                android:layout_height="wrap_content">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/budgetRecyclerView"
@@ -63,28 +58,24 @@
                     tools:itemCount="2"
                     tools:listitem="@layout/item_monthly_activity_categories" />
 
-            </androidx.cardview.widget.CardView>
+            </FrameLayout>
 
             <TextView
                 android:id="@+id/merchantsTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="12dp"
+                android:fontFamily="sans-serif-medium"
                 android:text="Merchants"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                android:textStyle="bold" />
+                android:textSize="28sp" />
 
-            <androidx.cardview.widget.CardView
+            <FrameLayout
                 android:id="@+id/merchantsCardView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="12dp"
-                app:cardCornerRadius="@dimen/card_corner_radius"
-                app:cardElevation="0dp">
+                android:layout_height="wrap_content">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/merchantRecyclerView"
@@ -93,29 +84,25 @@
                     android:nestedScrollingEnabled="false"
                     tools:itemCount="2"
                     tools:listitem="@layout/item_monthly_activity_credits" />
-            </androidx.cardview.widget.CardView>
+            </FrameLayout>
 
             <TextView
                 android:id="@+id/textViewMerchants"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="12dp"
+                android:fontFamily="sans-serif-medium"
                 android:text="Credits"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                android:textStyle="bold" />
+                android:textSize="28sp" />
 
-            <androidx.cardview.widget.CardView
+            <FrameLayout
                 android:id="@+id/creditsCardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="12dp"
-                android:layout_marginBottom="12dp"
-                app:cardCornerRadius="@dimen/card_corner_radius"
-                app:cardElevation="0dp">
+                android:layout_marginBottom="12dp">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/creditRecyclerView"
@@ -124,7 +111,7 @@
                     android:nestedScrollingEnabled="false"
                     tools:itemCount="2"
                     tools:listitem="@layout/item_monthly_activity_credits" />
-            </androidx.cardview.widget.CardView>
+            </FrameLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
