--- a/app/src/main/res/layout/fragment_transaction_item_detail.xml
+++ b/app/src/main/res/layout/fragment_transaction_item_detail.xml
@@ -5,31 +5,44 @@
     android:id="@+id/transactionDetailConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F1F1F1"
-    android:visibility="invisible"
     tools:context=".TransactionItemDetailFragment">
 
+    <ProgressBar
+        android:id="@+id/transactionItemDetailProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="12dp"
+        android:indeterminate="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/transactionDetailNestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageViewTransactionDetailLogo"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/shopping_background"
                 android:contentDescription="TODO"
-                android:padding="8sp"
+                android:padding="12dp"
                 android:src="@drawable/shopping" />
 
             <TextView
@@ -39,8 +52,8 @@
                 android:fontFamily="sans-serif-medium"
                 android:text="$35.71"
                 android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                android:textSize="60sp" />
 
             <TextView
                 android:id="@+id/textViewTransactionDetailName"
@@ -57,13 +70,15 @@
                 android:text="4/1/20"
                 android:textAlignment="center" />
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/transactionDetailStatusCardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="32dp"
+                android:layout_marginEnd="12dp"
                 app:cardCornerRadius="@dimen/card_corner_radius"
-                app:cardElevation="0dp">
+                app:cardElevation="@dimen/cardview_default_elevation">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -77,7 +92,7 @@
                         android:layout_marginTop="12dp"
                         android:layout_marginEnd="12dp"
                         android:text="Status: Posted"
-                        android:textColor="@color/colorPrimaryDark"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -121,15 +136,17 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/transactionDetailMapAndLocationCardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="12dp"
                 app:cardCornerRadius="@dimen/card_corner_radius"
-                app:cardElevation="0dp">
+                app:cardElevation="@dimen/cardview_default_elevation">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -187,26 +204,26 @@
                     </FrameLayout>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
             <TextView
                 android:id="@+id/transactionDetailHistoryTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="12dp"
                 android:text="Similar Transactions"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                 android:textStyle="bold"
                 android:visibility="invisible" />
 
-            <androidx.cardview.widget.CardView
+            <FrameLayout
                 android:id="@+id/transactionDetailHistoryCardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:layout_marginBottom="12dp"
-                app:cardCornerRadius="@dimen/card_corner_radius"
-                app:cardElevation="0dp">
+                android:layout_marginBottom="12dp">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/transactionDetailTransactionHistoryRecyclerView"
@@ -215,7 +232,7 @@
                     android:nestedScrollingEnabled="false"
                     tools:itemCount="2"
                     tools:listitem="@layout/item_transaction" />
-            </androidx.cardview.widget.CardView>
+            </FrameLayout>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
